# swisslos-cralwer

./: .gitattributes  Cargo.toml  README.md
benches/: lotto_parser.rs  winning-numbers.html
examples/: lotto_draw.rs
src/: errors.rs  lib.rs  swiss_lotto.rs
