[package]
name = "swisslos-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swisslos_crawler"
path = "src/lib.rs"

[dependencies]
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
scraper = {git="https://github.com/causal-agent/scraper.git"}
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
rayon = "1.5.1"

[dev-dependencies]
tokio = {version="1.17.0", features=["full"]} 
